# Nama

./: .env  .env.example  .gitignore  GLASS_EFFECT_HARMONIZATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README-fa.md  README.md  TESTING_SETUP.md  bundlewatch.config.json  capacitor.config.ts  console  cypress.config.ts  electron-builder.json  eslint.config.js  eslint.config.mjs  generate-icon.js  generate-png-icon.js  index.html  main.js  package.json  plan.md  pnpm-lock.yaml  preload.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.test.json  unused-translations.json  update-imports.js  vite.config.ts  vitest.config.ts
.github/workflows/: build-android.yml  build-desktop.yml  ci.yml
.inlang/: settings.json
.qoder/quests/: bundle-size-monitor.md  i18n-hardcoded-strings.md
.qoder/rules/: rules.md
android/: gradle.properties  variables.gradle
android/app/: build.gradle
cypress/e2e/: contact-management.cy.ts
cypress/support/: commands.ts  e2e.ts
project.inlang/: project_id
public/: data
src/: App.refactored-settings.tsx  App.refactored-statistics.tsx  App.tsx  globals.css  main.tsx  rtl-fixes.css  rtl-test-styles.css  setupTests.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/__tests__/: custom-field-template.test.ts
src/components/: AISuggestionCard.tsx  AccessibilityContext.ts  AccessibilityProvider.tsx  AddCustomFieldTemplateDialog.tsx  AddGroupDialog.tsx  BottomNavigationBar.tsx  BundleSizeMonitor.tsx  Logo.tsx  (+44 more)
supabase/: update_functions_with_date_range.sql
(+507 files in other folders)
