[package]
name = "nama"
version = "1.0.0"
description = "یک اپلیکیشن دسکتاپ برای مدیریت مخاطبین و وظایف روزانه"
authors = ["mcuteangel"]
license = "MIT"
repository = "https://github.com/mcuteangel/Nama"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [
    "custom-protocol",
    "window",
    "shell-open",
    "fs",
    "dialog",
    "clipboard",
    "notification",
    "system-tray",
    "window-state"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
